# grout

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: autostart.rs  common.rs  config.rs  event.rs  grid.rs  hotkey.rs  main.rs  tray.rs  window.rs
src/window/: grid.rs  preview.rs
