[package]
name = "grout"
version = "0.3.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
crossbeam-channel = "0.4"
config = { version = "0.10", default-features=false, features = ['yaml'] }
dirs = "2.0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ['derive'] }
serde_yaml = "0.8"

[dependencies.winapi]
version = "0.3"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi"]
