[package]
name = "grout"
version = "0.7.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.4"
config = { version = "0.10", default-features=false, features = ['yaml'] }
dirs = "2.0"
lazy_static = "1.4"
regex = "1.3"
ron = "0.5"
serde = { version = "1.0", features = ['derive'] }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi", "winreg"]
